# climate-disclosure-agent

./: .gitignore  DESIGN.md  NEWS_VALIDATOR_SPEC.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  TECHNICAL_DOCUMENTATION.md  TEST_DATA_GUIDE.md  test_real_api_fast.py
cda/: agent.py  base.py  config.py
cda/adapters/: __init__.py  base.py  cdp_adapter.py
cda/extraction/: base.py
cda/ingestion/: base.py
cda/output/: __init__.py  dataframe_output.py  report.py
cda/scoring/: scorer.py
cda/validation/: __init__.py  base.py  completeness.py  consistency.py  credibility_scorer.py  cross_validator.py  event_extractor.py  news_consistency.py  news_models.py  pipeline.py  quantification.py
climate-disclosure-agent-v2/: pyproject.toml  setup.py  test_end_to_end.py  test_mock.py  validate_structure.py
climate-disclosure-agent-v2/cda/: __init__.py  base.py
climate-disclosure-agent-v2/cda/adapters/: sbti_adapter.py
climate-disclosure-agent-v2/cda/extraction/: llm_extractor.py  schema.py
climate-disclosure-agent-v2/cda/ingestion/: pdf_handler.py
climate-disclosure-agent-v2/cda/output/: base.py  json_output.py  visualizer.py
climate-disclosure-agent-v2/cda/scoring/: scorer.py
climate-disclosure-agent-v2/cda/validation/: __init__.py  base.py  news_data_source.py  risk_coverage.py
climate-disclosure-agent-v2/docs/: news_validation.md
climate-disclosure-agent-v2/examples/: 01_basic_analysis.py  02_with_external_data.py  04_batch_comparison.py
docs/: extending.md  methodology.md
examples/: 03_custom_validator.py  05_custom_adapter.py  example_news_validation.py
tests/: test_news_validator.py
