[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-disclosure-agent"
version = "0.1.0"
description = "A modular, extensible agent framework for automated climate disclosure analysis with pluggable validation modules and external data adapters."
readme = "README.md"
authors = [{name = "Author", email = "author@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["climate", "esg", "disclosure", "validation", "agent", "llm"]
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "plotly>=5.0",
    "pymupdf>=1.23",
    "pandas>=2.0",
    "pytest>=7.0",
    "langchain>=0.0.300",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]

[project.urls]
Homepage = "https://github.com/username/climate-disclosure-agent"
Repository = "https://github.com/username/climate-disclosure-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["cda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]